      + Add
    - debian/control:
      + Tweak Descriptions
  * Jordi Mallach:
    - debian/rules:
      + Install doxygen docs in /usr/share/doc/libasound2-doc/,
        not in .../libasound2-dev/  (Closes: #277837)
    - debian/libasound2-doc.install:
      + Update html docs path
    - debian/libasound2-doc.doc-base:
      + Add this file to register the doxygen docs

 -- Thomas Hood <jdthood@yahoo.co.uk>  Wed, 20 Oct 2004 21:49:14 +0200

alsa-lib (1.0.6-3) unstable; urgency=medium

  * Jordi Mallach:
    - Add NEWS file for libasound2 to describe the version mismatch
      problem (#275573) and to provide solution alternatives
    - debian/control: require debhelper (>= 4.1.51) for NEWS.Debian
      support
  * Thomas Hood:
    - Fix up copyright file
    - debian/control:
      + Tweak Description
      + Don't Depend on alsa-headers which doesn't exist any more.
      + Build-Depend on doxygen >> 1.3.8-20040913-1 in order to
        prevent build segfault

 -- Jordi Mallach <jordi@debian.org>  Mon, 18 Oct 2004 17:48:28 +0200

alsa-lib (1.0.6-2) unstable; urgency=medium

  * Thomas Hood:
    - conf.c
      + Add 01_conf_backslash.dpatch:
        Make backslash a LOCAL_UNEXPECTED_CHAR
        Patch backported from CVS
    - aserver.c
      + Add 01_aserver_options.dpatch:
        Terminate long_options structure  (Closes: #211893)
        Thanks to Clement Stenac for the patch
  * Jordi Mallach:
    - this rebuild should fix the version missmatch in version.h
      (closes: #271047).
    - debian/patches/01_alpha_versioned_symbols.dpatch: apply patch from
      Steve Langasek to force the usage of USE_VERSIONED_SYMBOLS on
      alpha to workaround the usage of non-portable assembly
      (closes: #272998).

 -- Jordi Mallach <jordi@debian.org>  Sun, 26 Sep 2004 18:38:47 +0200

alsa-lib (1.0.6-1) unstable; urgency=low

  * New upstream release.
  * Jordi Mallach:
    - debian/control: add Thomas Hood <jdthood@aglu.demon.nl> to Uploaders.
